--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -510,39 +510,39 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d4 : x = x := by term_derivation_reflection
     have d5 : (2 : ℝ) * x = (2 : ℝ) * x ^ 1 := by term_derivation_non_one_literal_mul_atom
     have d6 : (2 : ℝ) * x = (2 : ℝ) * x ^ 1 := by term_derivation_mul_eq
-    have d7 : (-((2 : ℝ) * x ^ 1) : ℝ) = ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_neg_product
-    have d8 : (-((2 : ℝ) * x) : ℝ) = ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_neg_eq
-    have d9 : (1 : ℝ) * x ^ 2 + ((-2 : ℤ) : ℝ) * x ^ 1 = (0 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_product_add_product_greater
-    have d10 : x ^ 2 + (-((2 : ℝ) * x) : ℝ) = (0 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d2 d8 eq_identity_coercion eq_identity_coercion d9
-    have d11 : x ^ 2 - (2 : ℝ) * x = (0 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
+    have d7 : (-((2 : ℝ) * x ^ 1) : ℝ) = (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_neg_product
+    have d8 : (-((2 : ℝ) * x) : ℝ) = (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_neg_eq
+    have d9 : (1 : ℝ) * x ^ 2 + (-(2: ℤ) : ℝ) * x ^ 1 = (0 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_product_add_product_greater
+    have d10 : x ^ 2 + (-((2 : ℝ) * x) : ℝ) = (0 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d2 d8 eq_identity_coercion eq_identity_coercion d9
+    have d11 : x ^ 2 - (2 : ℝ) * x = (0 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
     have d12 : 1 = 1 := by term_derivation_reflection
     have d13 : 1 = 1 := by term_derivation_reflection
     have d14 : 0 + 1 = 1 := by term_derivation_zero_add
-    have d15 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_reflection
-    have d16 : (0 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_sum_add_literal
-    have d17 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
-    have d18 : (0 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + (1 : ℝ) = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sum_add_literal
-    have d19 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d11 d12 eq_identity_coercion eq_nat_to_real_coercion d18
+    have d15 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_reflection
+    have d16 : (0 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_sum_add_literal
+    have d17 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
+    have d18 : (0 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + (1 : ℝ) = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sum_add_literal
+    have d19 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d11 d12 eq_identity_coercion eq_nat_to_real_coercion d18
     have d20 : 0 = 0 := by term_derivation_reflection
     have d21 : 1 = 1 := by term_derivation_reflection
-    have d22 : (-2 : ℤ) = (-2 : ℤ) := by term_derivation_reflection
+    have d22 : -(2: ℤ) = -(2: ℤ) := by term_derivation_reflection
     have d23 : x = x := by term_derivation_reflection
     have d24 : x ^ 1 = x := by term_derivation_power_one
-    have d25 : ((-2 : ℤ) : ℝ) * x = ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_non_one_literal_mul_atom
-    have d26 : ((-2 : ℤ) : ℝ) * x ^ 1 = ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_mul_eq
-    have d27 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_reflection
-    have d28 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_add_eq d21 d26 eq_nat_to_real_coercion eq_identity_coercion d27
+    have d25 : (-(2: ℤ) : ℝ) * x = (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_non_one_literal_mul_atom
+    have d26 : (-(2: ℤ) : ℝ) * x ^ 1 = (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_mul_eq
+    have d27 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_reflection
+    have d28 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_add_eq d21 d26 eq_nat_to_real_coercion eq_identity_coercion d27
     have d29 : x = x := by term_derivation_reflection
     have d30 : 2 = 2 := by term_derivation_reflection
     have d31 : x ^ 2 = (1 : ℝ) * x ^ 2 := by term_derivation_non_reduced_power
     have d32 : (1 : ℝ) * x ^ 2 = (1 : ℝ) * x ^ 2 := by term_derivation_one_mul
-    have d33 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
-    have d34 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d28 d32 eq_identity_coercion eq_identity_coercion d33
+    have d33 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
+    have d34 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d28 d32 eq_identity_coercion eq_identity_coercion d33
     have d35 : (-(0 : ℤ) : ℤ) = 0 := by term_derivation_neg_literal
-    have d36 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + (0 : ℝ) = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_nf_add_zero
-    have d37 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + ((-(0 : ℤ) : ℤ) : ℝ) = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d34 d35 eq_identity_coercion eq_nat_to_real_coercion d36
-    have d38 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 - (0 : ℝ) = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
-    have d39 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) ≥ (0 : ℝ) ↔ (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 ≥ (0 : ℝ) := by term_derivation_num_comparison
+    have d36 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + (0 : ℝ) = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_nf_add_zero
+    have d37 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + ((-(0 : ℤ) : ℤ) : ℝ) = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d34 d35 eq_identity_coercion eq_nat_to_real_coercion d36
+    have d38 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 - (0 : ℝ) = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
+    have d39 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) ≥ (0 : ℝ) ↔ (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 ≥ (0 : ℝ) := by term_derivation_num_comparison
     have d40 : x = x := by term_derivation_reflection
     have d41 : 2 = 2 := by term_derivation_reflection
     have d42 : x ^ 2 = (1 : ℝ) * x ^ 2 := by term_derivation_non_reduced_power
@@ -565,14 +565,14 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d59 : x ^ 1 = x := by term_derivation_power_one
     have d60 : (2 : ℝ) * x = (2 : ℝ) * x ^ 1 := by term_derivation_non_one_literal_mul_atom
     have d61 : (2 : ℝ) * x ^ 1 = (2 : ℝ) * x ^ 1 := by term_derivation_mul_eq
-    have d62 : (-((2 : ℝ) * x ^ 1) : ℝ) = ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_neg_product
-    have d63 : (-((2 : ℝ) * x ^ 1) : ℝ) = ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_neg_eq
-    have d64 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 := by term_derivation_reflection
-    have d65 : (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
-    have d66 : (1 : ℝ) + (1 : ℝ) * x ^ 2 + ((-2 : ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sum_add_product_greater
-    have d67 : (1 : ℝ) + (1 : ℝ) * x ^ 2 + (-((2 : ℝ) * x ^ 1) : ℝ) = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d56 d63 eq_identity_coercion eq_identity_coercion d66
-    have d68 : (1 : ℝ) + (1 : ℝ) * x ^ 2 - (2 : ℝ) * x ^ 1 = (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
-    have d69 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x ↔ (1 : ℝ) + ((-2 : ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 ≥ (0 : ℝ) := by term_derivation_num_comparison
+    have d62 : (-((2 : ℝ) * x ^ 1) : ℝ) = (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_neg_product
+    have d63 : (-((2 : ℝ) * x ^ 1) : ℝ) = (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_neg_eq
+    have d64 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 := by term_derivation_reflection
+    have d65 : (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
+    have d66 : (1 : ℝ) + (1 : ℝ) * x ^ 2 + (-(2: ℤ) : ℝ) * x ^ 1 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sum_add_product_greater
+    have d67 : (1 : ℝ) + (1 : ℝ) * x ^ 2 + (-((2 : ℝ) * x ^ 1) : ℝ) = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d56 d63 eq_identity_coercion eq_identity_coercion d66
+    have d68 : (1 : ℝ) + (1 : ℝ) * x ^ 2 - (2 : ℝ) * x ^ 1 = (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
+    have d69 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x ↔ (1 : ℝ) + (-(2: ℤ) : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 ≥ (0 : ℝ) := by term_derivation_num_comparison
     have d70 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x := by term_derivation_non_trivial_finish
     assumption
   have h7 : x > (0 : ℝ) := by old_main_hypothesis
@@ -1113,93 +1113,93 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
   have h8 : a / b + b / a ≥ (2 : ℝ) := by
     have d : a = a := by term_derivation_reflection
     have d1 : b = b := by term_derivation_reflection
-    have d2 : a * b ^ (-1 : ℤ) = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_atom_mul_exponential_greater
-    have d3 : a / b = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_div_atom
-    have d4 : a / b = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_div_eq
-    have d5 : (-(2 : ℤ) : ℤ) = (-2 : ℤ) := by term_derivation_neg_literal
-    have d6 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + ((-2 : ℤ) : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_product_add_literal
-    have d7 : a / b + ((-(2 : ℤ) : ℤ) : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_add_eq d4 d5 eq_identity_coercion eq_int_to_real_coercion d6
-    have d8 : a / b - (2 : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_sub_eqs_add_neg
+    have d2 : a * b ^ (-(1: ℤ)) = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_atom_mul_exponential_greater
+    have d3 : a / b = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_div_atom
+    have d4 : a / b = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_div_eq
+    have d5 : (-(2 : ℤ) : ℤ) = -(2: ℤ) := by term_derivation_neg_literal
+    have d6 : (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (-(2: ℤ) : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_product_add_literal
+    have d7 : a / b + ((-(2 : ℤ) : ℤ) : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_add_eq d4 d5 eq_identity_coercion eq_int_to_real_coercion d6
+    have d8 : a / b - (2 : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_sub_eqs_add_neg
     have d9 : b = b := by term_derivation_reflection
     have d10 : a = a := by term_derivation_reflection
-    have d11 : b * a ^ (-1 : ℤ) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_atom_mul_exponential_less
-    have d12 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_div_atom
-    have d13 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_div_eq
-    have d14 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_reflection
-    have d15 : a / b - (2 : ℝ) + b / a = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d8 d13 eq_identity_coercion eq_identity_coercion d14
+    have d11 : b * a ^ (-(1: ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_atom_mul_exponential_less
+    have d12 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_div_atom
+    have d13 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_div_eq
+    have d14 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_reflection
+    have d15 : a / b - (2 : ℝ) + b / a = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_add_eq d8 d13 eq_identity_coercion eq_identity_coercion d14
     have d16 : 0 = 0 := by term_derivation_reflection
-    have d17 : (-2 : ℤ) = (-2 : ℤ) := by term_derivation_reflection
+    have d17 : -(2: ℤ) = -(2: ℤ) := by term_derivation_reflection
     have d18 : b = b := by term_derivation_reflection
-    have d19 : (-1 : ℤ) = (-1 : ℤ) := by term_derivation_reflection
-    have d20 : b ^ (-1 : ℤ) = (1 : ℝ) * b ^ (-1 : ℤ) := by term_derivation_non_reduced_power
+    have d19 : -(1: ℤ) = -(1: ℤ) := by term_derivation_reflection
+    have d20 : b ^ (-(1: ℤ)) = (1 : ℝ) * b ^ (-(1: ℤ)) := by term_derivation_non_reduced_power
     have d21 : a = a := by term_derivation_reflection
     have d22 : a ^ 1 = a := by term_derivation_power_one
-    have d23 : (1 : ℝ) * b ^ (-1 : ℤ) * a = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_simple_product_mul_base_less
-    have d24 : b ^ (-1 : ℤ) * a ^ 1 = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_mul_eq
-    have d25 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_one_mul
-    have d26 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_reflection
-    have d27 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_add_eq d17 d25 eq_int_to_real_coercion eq_identity_coercion d26
+    have d23 : (1 : ℝ) * b ^ (-(1: ℤ)) * a = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_simple_product_mul_base_less
+    have d24 : b ^ (-(1: ℤ)) * a ^ 1 = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_mul_eq
+    have d25 : (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_one_mul
+    have d26 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_reflection
+    have d27 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_add_eq d17 d25 eq_int_to_real_coercion eq_identity_coercion d26
     have d28 : b = b := by term_derivation_reflection
     have d29 : b ^ 1 = b := by term_derivation_power_one
     have d30 : a = a := by term_derivation_reflection
-    have d31 : (-1 : ℤ) = (-1 : ℤ) := by term_derivation_reflection
-    have d32 : a ^ (-1 : ℤ) = (1 : ℝ) * a ^ (-1 : ℤ) := by term_derivation_non_reduced_power
+    have d31 : -(1: ℤ) = -(1: ℤ) := by term_derivation_reflection
+    have d32 : a ^ (-(1: ℤ)) = (1 : ℝ) * a ^ (-(1: ℤ)) := by term_derivation_non_reduced_power
     have d33 : b * (1 : ℝ) = (1 : ℝ) * b ^ 1 := by term_derivation_base_mul_literal
-    have d34 : (1 : ℝ) * b ^ 1 * a ^ (-1 : ℤ) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_simple_product_mul_exponential_less
-    have d35 : b * ((1 : ℝ) * a ^ (-1 : ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_mul_product
-    have d36 : b ^ 1 * a ^ (-1 : ℤ) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_mul_eq
-    have d37 : (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_one_mul
-    have d38 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_reflection
-    have d39 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d27 d37 eq_identity_coercion eq_identity_coercion d38
+    have d34 : (1 : ℝ) * b ^ 1 * a ^ (-(1: ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_simple_product_mul_exponential_less
+    have d35 : b * ((1 : ℝ) * a ^ (-(1: ℤ))) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_mul_product
+    have d36 : b ^ 1 * a ^ (-(1: ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_mul_eq
+    have d37 : (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_one_mul
+    have d38 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_reflection
+    have d39 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_add_eq d27 d37 eq_identity_coercion eq_identity_coercion d38
     have d40 : (-(0 : ℤ) : ℤ) = 0 := by term_derivation_neg_literal
-    have d41 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + (0 : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_nf_add_zero
-    have d42 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + ((-(0 : ℤ) : ℤ) : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d39 d40 eq_identity_coercion eq_nat_to_real_coercion d41
-    have d43 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) - (0 : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_sub_eqs_add_neg
-    have d44 : a / b - (2 : ℝ) + b / a ≥ (0 : ℝ) ↔ ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) ≥ (0 : ℝ) := by term_derivation_num_comparison
+    have d41 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) + (0 : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_nf_add_zero
+    have d42 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) + ((-(0 : ℤ) : ℤ) : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_add_eq d39 d40 eq_identity_coercion eq_nat_to_real_coercion d41
+    have d43 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) - (0 : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_sub_eqs_add_neg
+    have d44 : a / b - (2 : ℝ) + b / a ≥ (0 : ℝ) ↔ (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) ≥ (0 : ℝ) := by term_derivation_num_comparison
     have d45 : a = a := by term_derivation_reflection
     have d46 : b = b := by term_derivation_reflection
-    have d47 : a * b ^ (-1 : ℤ) = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_atom_mul_exponential_greater
-    have d48 : a / b = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_div_atom
-    have d49 : a / b = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_div_eq
+    have d47 : a * b ^ (-(1: ℤ)) = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_atom_mul_exponential_greater
+    have d48 : a / b = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_div_atom
+    have d49 : a / b = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_div_eq
     have d50 : b = b := by term_derivation_reflection
     have d51 : a = a := by term_derivation_reflection
-    have d52 : b * a ^ (-1 : ℤ) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_atom_mul_exponential_less
-    have d53 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_div_atom
-    have d54 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_div_eq
-    have d55 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_product_add_product_less
-    have d56 : a / b + b / a = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d49 d54 eq_identity_coercion eq_identity_coercion d55
+    have d52 : b * a ^ (-(1: ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_atom_mul_exponential_less
+    have d53 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_div_atom
+    have d54 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_div_eq
+    have d55 : (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_product_add_product_less
+    have d56 : a / b + b / a = (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_add_eq d49 d54 eq_identity_coercion eq_identity_coercion d55
     have d57 : 2 = 2 := by term_derivation_reflection
     have d58 : b = b := by term_derivation_reflection
-    have d59 : (-1 : ℤ) = (-1 : ℤ) := by term_derivation_reflection
-    have d60 : b ^ (-1 : ℤ) = (1 : ℝ) * b ^ (-1 : ℤ) := by term_derivation_non_reduced_power
+    have d59 : -(1: ℤ) = -(1: ℤ) := by term_derivation_reflection
+    have d60 : b ^ (-(1: ℤ)) = (1 : ℝ) * b ^ (-(1: ℤ)) := by term_derivation_non_reduced_power
     have d61 : a = a := by term_derivation_reflection
     have d62 : a ^ 1 = a := by term_derivation_power_one
-    have d63 : (1 : ℝ) * b ^ (-1 : ℤ) * a = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_simple_product_mul_base_less
-    have d64 : b ^ (-1 : ℤ) * a ^ 1 = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_mul_eq
-    have d65 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_one_mul
-    have d66 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_zero_add
+    have d63 : (1 : ℝ) * b ^ (-(1: ℤ)) * a = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_simple_product_mul_base_less
+    have d64 : b ^ (-(1: ℤ)) * a ^ 1 = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_mul_eq
+    have d65 : (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_one_mul
+    have d66 : (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) = (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_zero_add
     have d67 : b = b := by term_derivation_reflection
     have d68 : b ^ 1 = b := by term_derivation_power_one
     have d69 : a = a := by term_derivation_reflection
-    have d70 : (-1 : ℤ) = (-1 : ℤ) := by term_derivation_reflection
-    have d71 : a ^ (-1 : ℤ) = (1 : ℝ) * a ^ (-1 : ℤ) := by term_derivation_non_reduced_power
+    have d70 : -(1: ℤ) = -(1: ℤ) := by term_derivation_reflection
+    have d71 : a ^ (-(1: ℤ)) = (1 : ℝ) * a ^ (-(1: ℤ)) := by term_derivation_non_reduced_power
     have d72 : b * (1 : ℝ) = (1 : ℝ) * b ^ 1 := by term_derivation_base_mul_literal
-    have d73 : (1 : ℝ) * b ^ 1 * a ^ (-1 : ℤ) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_simple_product_mul_exponential_less
-    have d74 : b * ((1 : ℝ) * a ^ (-1 : ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_mul_product
-    have d75 : b ^ 1 * a ^ (-1 : ℤ) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_mul_eq
-    have d76 : (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_one_mul
-    have d77 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_product_add_product_less
-    have d78 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d66 d76 eq_identity_coercion eq_identity_coercion d77
-    have d79 : (-(2 : ℤ) : ℤ) = (-2 : ℤ) := by term_derivation_neg_literal
-    have d80 : (-2 : ℤ) = (-2 : ℤ) := by term_derivation_reflection
-    have d81 : (0 : ℤ) + (-2 : ℤ) = (-2 : ℤ) := by term_derivation_zero_add
-    have d82 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_reflection
-    have d83 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + ((-2 : ℤ) : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_sum_add_literal
-    have d84 : ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_reflection
-    have d85 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + ((-2 : ℤ) : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_sum_add_literal
-    have d86 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + ((-(2 : ℤ) : ℤ) : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d78 d79 eq_identity_coercion eq_int_to_real_coercion d85
-    have d87 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) - (2 : ℝ) = ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_sub_eqs_add_neg
-    have d88 : a / b + b / a ≥ (2 : ℝ) ↔ ((-2 : ℤ) : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) ≥ (0 : ℝ) := by term_derivation_num_comparison
+    have d73 : (1 : ℝ) * b ^ 1 * a ^ (-(1: ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_simple_product_mul_exponential_less
+    have d74 : b * ((1 : ℝ) * a ^ (-(1: ℤ))) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_mul_product
+    have d75 : b ^ 1 * a ^ (-(1: ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_mul_eq
+    have d76 : (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_one_mul
+    have d77 : (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_product_add_product_less
+    have d78 : (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_add_eq d66 d76 eq_identity_coercion eq_identity_coercion d77
+    have d79 : (-(2 : ℤ) : ℤ) = -(2: ℤ) := by term_derivation_neg_literal
+    have d80 : -(2: ℤ) = -(2: ℤ) := by term_derivation_reflection
+    have d81 : (0 : ℤ) + -(2: ℤ) = -(2: ℤ) := by term_derivation_zero_add
+    have d82 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_reflection
+    have d83 : (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (-(2: ℤ) : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) := by term_derivation_sum_add_literal
+    have d84 : (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_reflection
+    have d85 : (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) + (-(2: ℤ) : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_sum_add_literal
+    have d86 : (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) + ((-(2 : ℤ) : ℤ) : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_add_eq d78 d79 eq_identity_coercion eq_int_to_real_coercion d85
+    have d87 : (0 : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) - (2 : ℝ) = (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) := by term_derivation_sub_eqs_add_neg
+    have d88 : a / b + b / a ≥ (2 : ℝ) ↔ (-(2: ℤ) : ℝ) + (1 : ℝ) * (b ^ (-(1: ℤ)) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-(1: ℤ))) ≥ (0 : ℝ) := by term_derivation_num_comparison
     have d89 : a / b + b / a ≥ (2 : ℝ) := by term_derivation_non_trivial_finish
     assumption
   obvious
